Extracted calls to JabRefFrame